# rdp-pinocchio

./: .gitignore  Cargo.toml  README.md  program-id.txt
src/: entrypoint.rs  error.rs  lib.rs  processor.rs
src/crypto/: bulletproofs_verifier.rs  merkle_verifier.rs  mod.rs  ring_verifier.rs  scalar_reduce.rs  sparse_merkle.rs  types.rs
src/instructions/: cancel_withdraw.rs  deposit.rs  execute_withdraw.rs  initialize.rs  mod.rs  prepare_withdraw.rs  upload_smt_proof.rs  withdraw.rs
src/state/: mod.rs  pending_withdraw.rs  ring_pool.rs
tests/: package-lock.json  package.json  test-double-spend-ring16.ts  test-ring16-2tx.ts  tsconfig.json
